Add azure MySql database connection

--- a/JobBoard/appsettings.json
+++ b/JobBoard/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "LocalConnection": "server=localhost;database=JobBoardDB;user=root;password=Password",
+    "DefaultConnection": "server=staz-back-server.mysql.database.azure.com;database=jobboarddb;user=opviogsild;password=Staz123UJ123"
+  },
   "AllowedHosts": "*"
 }
