Add database connection to FreeMySqlConnection.net

--- a/JobBoard/appsettings.json
+++ b/JobBoard/appsettings.json
@@ -8,7 +8,8 @@
   },
   "ConnectionStrings": {
     "LocalConnection": "server=localhost;database=JobBoardDB;user=root;password=Password",
-    "DefaultConnection": "server=staz-back-server.mysql.database.azure.com;database=jobboarddb;user=opviogsild;password=Staz123UJ123"
+    "DefaultConnection": "server=staz-back-server.mysql.database.azure.com;database=jobboarddb;user=opviogsild;password=Staz123UJ123",
+    "FreeMySqlConnection": "server=sql11.freemysqlhosting.net;database=sql11477677;user=sql11477677;password=CASIKpyuwn;port=3306"
   },
   "AllowedHosts": "*"
 }
